[gd_scene load_steps=15 format=3 uid="uid://p5b7fplx00td"]

[ext_resource type="Texture2D" uid="uid://c30miqsicvtj0" path="res://Assets_PixelAdventure/Traps/Spike Head/spikeHead.png" id="1_821r3"]
[ext_resource type="Script" path="res://Trampas/spikeHead.gd" id="1_pjpcg"]
[ext_resource type="PackedScene" uid="uid://sqxbpo7m6rht" path="res://Trampas/dmg_player.tscn" id="3_gpma4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m4p8j"]
size = Vector2(39, 39)

[sub_resource type="Animation" id="Animation_67yjc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_iltbs"]
resource_name = "hitWAllTop"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_v664f"]
resource_name = "despierto"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qs0i4"]
resource_name = "dormido"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_dldek"]
resource_name = "leftHit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_6ghss"]
resource_name = "rightHit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_x20ax"]
resource_name = "topHit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_ldis2"]
resource_name = "wakeUp"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 5, 6, 7, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3povq"]
_data = {
"RESET": SubResource("Animation_67yjc"),
"bottomHit": SubResource("Animation_iltbs"),
"despierto": SubResource("Animation_v664f"),
"dormido": SubResource("Animation_qs0i4"),
"leftHit": SubResource("Animation_dldek"),
"rightHit": SubResource("Animation_6ghss"),
"topHit": SubResource("Animation_x20ax"),
"wakeUp": SubResource("Animation_ldis2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h50xe"]
size = Vector2(41, 41)

[node name="SpikeHead" type="CharacterBody2D"]
light_mask = 2
visibility_layer = 5
collision_layer = 2
collision_mask = 4
script = ExtResource("1_pjpcg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 5
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_m4p8j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_821r3")
hframes = 4
vframes = 6
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3povq")
}

[node name="dmgPlayer" parent="." instance=ExtResource("3_gpma4")]
light_mask = 2

[node name="CollisionShape2D" parent="dmgPlayer" index="0"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_h50xe")

[node name="RaycastsDamage" type="Node2D" parent="."]

[node name="RayCast2DRight" type="RayCast2D" parent="RaycastsDamage"]
target_position = Vector2(200, 0)

[node name="RayCast2DLeft" type="RayCast2D" parent="RaycastsDamage"]
target_position = Vector2(-200, 0)

[node name="RayCast2Down" type="RayCast2D" parent="RaycastsDamage"]
target_position = Vector2(0, 200)

[node name="RayCast2DUp" type="RayCast2D" parent="RaycastsDamage"]
target_position = Vector2(0, -200)

[node name="volverAtacar" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="despierto" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Node2D" type="Node2D" parent="."]

[node name="RayWorldDown" type="RayCast2D" parent="Node2D"]
target_position = Vector2(0, 25)
collision_mask = 4

[node name="RayWorldUp" type="RayCast2D" parent="Node2D"]
target_position = Vector2(0, -25)
collision_mask = 4

[node name="RayWorldRight" type="RayCast2D" parent="Node2D"]
target_position = Vector2(25, 0)
collision_mask = 4

[node name="RayWorldLeft" type="RayCast2D" parent="Node2D"]
target_position = Vector2(-25, 0)
collision_mask = 4

[connection signal="timeout" from="volverAtacar" to="." method="_on_volver_atacar_timeout"]
[connection signal="timeout" from="despierto" to="." method="_on_despierto_timeout"]

[editable path="dmgPlayer"]
